@startuml titre Manipulation de lampes

'''classes
class Lampe {
    -nom : String
    -allumee : boolean

    +Lampe(nom)
    +allumer()
    +eteindre()
    +toString() : String
}

interface Appareil{
    +allumer()
    +eteindre()
}

class Hifi {
    +son : int;

    +allumer()
    +eteindre()
    +toString(): String
}


class Telecommande {

    +Telecommande()
    +ajouter(a)
    +activer(indice)
    +desactiverLampe(indice)
    +activerTout()
    +toString() : String
}

class Cheminee {
    +intensite : int

    +Cheminee()
    +changerIntensite(i)
    +getLumiere() : int
    +toString() : String
}

class AdapterCheminee implements Appareil{
    +AdapterCheminee()
    +allumer()
    +eteindre()
    +toString() : String
}

'''relations
Telecommande "1" --> "*" Appareil : appareils
AdapterCheminee "1" --> "1" Cheminee : ch
Appareil <|.. Lampe
Appareil <|.. Hifi

@enduml